--- a/landing.scss
+++ b/landing.scss
@@ -99,8 +99,8 @@
 .card-section{width: 1262px;
 background-color:#ffffff;
 box-shadow:  0px 2px 20px rgba(21, 24, 36, 0.15993);
-height: 655px;
-right: 100px;
+padding-left: auto;
+padding-right: auto;
 margin:auto;
 margin-top: -82px;
 .card-header{font-family: Lato;
@@ -109,8 +109,10 @@ margin-top: -82px;
   line-height: 42px;
   color:#102746;
   width: 270px;
-top: 832px;
-left: 188px; }
+  margin: 140px;
+  padding-left: 99px;
+    padding-top: 98px;
+    margin-bottom: 120px;; }
   .card-boxes{display: flex;
     justify-content: space-around;
     align-items: center;
